<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camilus</string>
    <string name="action_settings">Settings</string>
    <string name="banner">Banner</string>
    <string name="user">User: </string>
    <string name="password">Password: </string>
    <string name="login">Log In</string>
    <string name="title_activity_main">Main</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_activity_scan">Scan</string>
    <string name="retrieve_job">Retrieve Jobs</string>
    <string name="title_activity_transfer">Transfer</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="transfer">Transfer</string>
    <string name="delivery">Delivery</string>
    <string name="appointment">Appointment</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="confirm_collection">Confirm Collection</string>
    <string name="delivered">Delivered</string>
    <string name="collected">Collected</string>
    <string name="not_at_home">Not At Home</string>
    <string name="title_activity_signature">Signature</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="scan">Scan</string>
    <string name="view_details">View Details</string>
    <string name="get_directions">Get Directions</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_gmap">GMap</string>

</resources>
